--- a/src/com/brandbuyer/skins/CustomListSkin.mxml
+++ b/src/com/brandbuyer/skins/CustomListSkin.mxml
@@ -155,7 +155,7 @@
     <!--- The Scroller component to add scroll bars to the list. -->
     <s:Scroller left="0" top="0" right="0" bottom="0" id="scroller" minViewportInset="1" hasFocusableChildren="false">
         <!--- @copy spark.components.SkinnableDataContainer#dataGroup -->
-        <s:DataGroup id="dataGroup" itemRenderer="com.app.renderers.MenuListItemCustomRenderer">
+        <s:DataGroup id="dataGroup" itemRenderer="com.brandbuyer.renderers.CustomListItemCustomRenderer">
             <s:layout>
                 <!--- The default layout is vertical and measures at least for 5 rows.  
                 When switching to a different layout, HorizontalLayout for example,
