--- a/src/com/brandbuyer/views/BrandsView.mxml
+++ b/src/com/brandbuyer/views/BrandsView.mxml
@@ -26,7 +26,7 @@
 			<s:Button label="Create New Brand"/>
 			<s:Button label="Search"/>
 		</s:HGroup>
-		<s:List id="list" width="100%" height="100%" itemRenderer="com.app.views.components.BrandItemRenderer">
+		<s:List id="list" width="100%" height="100%" itemRenderer="com.brandbuyer.components.BrandItemRenderer">
 			
 		</s:List>
 	</s:VGroup>
