--- a/src/com/brandbuyer/views/SettingsView.mxml
+++ b/src/com/brandbuyer/views/SettingsView.mxml
@@ -35,5 +35,5 @@
 		]]>
 	</fx:Script>
 	<s:List id="menuList" change="onItemSelect()" width="100%" height="100%"
-			skinClass="com.app.skins.CustomListSkin"></s:List>
+			skinClass="com.brandbuyer.skins.CustomListSkin"></s:List>
 </s:View>
