structure  issue resolved.

--- a/src/BuyerApp.mxml
+++ b/src/BuyerApp.mxml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:ViewNavigatorApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
 							xmlns:s="library://ns.adobe.com/flex/spark" 
-							firstView="com.brandbuyer.views.LoginView" applicationDPI="160">
+							firstView="com.brandbuyer.views.LoginView" applicationDPI="160" 
+							initialize="viewnavigatorapplication1_initializeHandler(event)">
+	<fx:Script>
+		<![CDATA[
+	//http://stackoverflow.com/questions/10392469/connecting-flex-to-sqlite
+			import com.brandbuyer.model.BrandData;
+			import com.brandbuyer.util.Test;
+			
+			import mx.collections.ArrayCollection;
+			import mx.events.FlexEvent;
+			
+			protected function viewnavigatorapplication1_initializeHandler(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				Test.getDummyBrandData();
+			}
+			
+		]]>
+	</fx:Script>
 	<fx:Declarations> 
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
