--- a/src/com/brandbuyer/views/SettingsView.mxml
+++ b/src/com/brandbuyer/views/SettingsView.mxml
@@ -27,7 +27,7 @@
 			private function onItemSelect():void {
 				switch(menuList.selectedIndex){
 					case 4:{
-						navigator.pushView(SettingsView);
+						navigator.popView();
 						break;
 					}
 				}
