--- a/src/assets/images/CustomViewSkin.mxml
+++ b/src/assets/images/CustomViewSkin.mxml
@@ -27,6 +27,7 @@
 
     <fx:Script fb:purpose="styling">
         <![CDATA[         
+			import spark.components.View;
             /**
              *  @private
              */
@@ -86,7 +87,7 @@
 					 verticalCenter="0" textAlign="center"
 					 paddingLeft="50" paddingRight="50" maxDisplayedLines="1"/>
 			<s:Image source="{BG}" scaleX="0.5" scaleY="0.5" scaleZ="0.5" verticalCenter="0"
-					 right="15"/>
+					 right="15" click="{(this.hostComponent as View).navigator.popView()}"/>
 		</s:BorderContainer>
 		<s:Group id="contentGroup" height="100%" width="100%" minWidth="0" minHeight="0">
 			<s:layout>
